# litellm-apple-foundation-models

./: README.md  main.py  pyproject.toml
.github/workflows/: publish.yml
src/litellm_apple_foundation_models/: __init__.py  common_utils.py  provider.py
src/litellm_apple_foundation_models/chat/: __init__.py
tests/: test_apple_foundation_models.py  test_common_utils.py  test_registration.py
